// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot 1`] = `
<div
  className="button"
  data-testid="buttontestid"
>
  On
  Click Me
</div>
`;

exports[`it matches snapshot 2`] = `
<div
  className="button"
  data-testid="buttontestid"
>
  On
  Click 
</div>
`;
